crates/rstest-bdd/tests/ui_macros/datatable_wrong_type.stderr
error[E0277]: the trait bound `Wrong: TryFrom<Vec<Vec<String>>>` is not satisfied
  --> tests/ui_macros/datatable_wrong_type.rs:11:1
   |
11 | #[given("a step with wrong table type")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `From<Vec<Vec<String>>>` is not implemented for `Wrong`
  --> tests/ui_macros/datatable_wrong_type.rs:9:1
   |
 9 | struct Wrong;
   | ^^^^^^^^^^^^
   = note: required for `Vec<Vec<String>>` to implement `Into<Wrong>`
   = note: required for `Wrong` to implement `TryFrom<Vec<Vec<String>>>`
   = note: required for `Vec<Vec<String>>` to implement `TryInto<Wrong>`
   = note: this error originates in the attribute macro `given` (in Nightly builds, run with -Z macro-backtrace for more info)
